# http-client

http-client/: http-client.cabal
http-client/Data/: KeyedPool.hs
http-conduit/: http-conduit.cabal
