cabal-version:   >= 1.10
name:            http-conduit
version:         2.3.8.3
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        HTTP client package with conduit interface and HTTPS support.
description:         Hackage documentation generation is not reliable. For up to date documentation, please see: <http://www.stackage.org/package/http-conduit>.
category:        Web, Conduit
stability:       Stable
build-type:      Simple
homepage:        https://github.com/snoyberg/http-client
extra-source-files: test/main.hs
                  , test/CookieTest.hs
                  , multipart-example.bin
                  , nyan.gif
                  , certificate.pem
                  , key.pem
                  , README.md
                  , ChangeLog.md

flag aeson
  manual: True
  description: Enable the dependency on aeson
  default: True

library
    default-language: Haskell2010
    build-depends: base
                 , attoparsec
                 , bytestring
                 , transformers
                 , resourcet
                 , conduit
                 , conduit-extra
                 , http-types
                 , http-client
                 , http-client-tls
                 , mtl
                 , unliftio-core

    if flag(aeson)
      build-depends: aeson
                   , attoparsec-aeson

    if !impl(ghc>=7.9)
      build-depends:   void
    exposed-modules: Network.HTTP.Conduit
                     Network.HTTP.Client.Conduit
                     Network.HTTP.Simple
    ghc-options:     -Wall

test-suite test
    default-language: Haskell2010
    main-is: main.hs
    other-modules: CookieTest
    type: exitcode-stdio-1.0
    hs-source-dirs: test

    ghc-options:   -Wall
    cpp-options:   -DDEBUG
    build-depends: base
                 , HUnit
                 , hspec
                 , data-default-class
                 , crypton-connection
                 , warp-tls
                 , tls
                 , time
                 , blaze-builder
                 , bytestring
                 , text
                 , transformers
                 , conduit
                 , utf8-string
                 , case-insensitive
                 , unliftio
                 , wai
                 , warp
                 , wai-conduit
                 , http-types
                 , cookie
                 , http-client
                 , http-conduit
                 , conduit-extra
                 , streaming-commons
                 , temporary
                 , resourcet
                 , network

    if flag(aeson)
      build-depends: aeson
                   , attoparsec-aeson

source-repository head
  type:     git
  location: git://github.com/snoyberg/http-client.git
